--- a/articles/static/css/styles2.css
+++ b/articles/static/css/styles2.css
@@ -24,10 +24,27 @@ img {
 .article-author {
     color: #007bff; 
     margin-right: 10px;
+    padding: 0 60px;
+    
 }
 .article-created-date {
     color: #999;
+    padding: 0 60px;
 }
 .article-text {
-    margin-top: 10px;
+    font-size: 16px; 
+    line-height: 1.6; 
+    margin-top: 20px; 
+    padding: 0 60px;
+    text-align: justify; 
+}
+.article-title-center{
+    font-size: 24px;
+    text-align: center;
+}
+.all-articles-link{
+    font-size: 14px;
+    text-align: center;
+    color: black;
+    margin-top: 20px;
 }
