--- a/articles/templates/articles/archive.html
+++ b/articles/templates/articles/archive.html
@@ -12,7 +12,9 @@
     </div>
     {% for article in articles %}
     <div class="one-post">
-        <h2 class="post-title">{{ article.title }}</h2>
+        <h2 class="article-title">
+        <a href="{% url 'article_detail' article.id %}">{{ article.title }}</a>
+    </h2>
         <div class="article-info">
             <div class="article-author">
                 {{ article.author.username }}
